--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "California Fires"
+author: "Abhishek Sinha, Tomislav Galjanić"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
